// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`paragraph 1`] = `
.c0 {
  padding-left: 10px;
  padding-right: 10px;
}

.c1 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c1 {
    font-size: 18px;
    line-height: 30px;
  }
}

<div>
  <p>
    This being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </p>
</div>
`;

exports[`paragraph with a drop cap 1`] = `
.c0 {
  padding-left: 10px;
  padding-right: 10px;
}

.c1 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

.c2 {
  float: left;
  -webkit-margin-before: 11px !important;
  padding: 9px 10px 0 0;
  line-height: 0.6em;
  font-size: 110px;
  font-family: "TimesModern-Regular";
  color: #333333;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c1 {
    font-size: 18px;
    line-height: 30px;
  }
}

<div>
  <p>
    <span>
      T
    </span>
    his being Black History Month, last week was Politicians In Search Of An Eye-Catching Race-Related Policy Week.
  </p>
</div>
`;

exports[`paragraph with a short text and a drop cap 1`] = `
.c0 {
  padding-left: 10px;
  padding-right: 10px;
}

.c1 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

.c2 {
  float: left;
  -webkit-margin-before: 11px !important;
  padding: 9px 10px 0 0;
  line-height: 0.6em;
  font-size: 110px;
  font-family: "TimesModern-Regular";
  color: #333333;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c1 {
    font-size: 18px;
    line-height: 30px;
  }
}

<div>
  <p>
    <span>
      T
    </span>
    his being Black History
  </p>
</div>
`;
